--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header class="main_header">
-    <img th:src="@{/image/logo.png}" alt="로고">
+    <img th:src="@{/logo/logo.png}" alt="로고">
     <form id="logoutForm" th:action="@{/logout}" method="post">
       <button class="btn_login" id="loginButton" onclick="handleLoginLogout()"></button>
     </form>
