--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
 
     <!-- Logo Button -->
     <button class="logo_btn" id="logo" th:onclick="'goToMainpage()'">
-      <img th:src="@{/image/logo.png}" alt="로고">
+      <img th:src="@{/logo/logo.png}" alt="로고">
     </button>
 
     <!-- Login Form -->
