--- a/src/main/resources/static/css/header.css
+++ b/src/main/resources/static/css/header.css
@@ -11,7 +11,7 @@ body {
   font-family: Arial, sans-serif;
 }
 
-.main_header {
+.header {
   width: 100%;
   height: 80px;
   background-color: white;
@@ -20,15 +20,17 @@ body {
   left: 0;
   display: flex;
   justify-content: space-between;
-  padding: 20px 60px; /* 원하는 여백 설정 */
-  z-index: 1000; /* 다른 요소 위에 표시 */
+  padding: 20px 60px;
+  z-index: 1000;
+  border-bottom: 1px solid lightgrey;
 }
-.main_header a {
+
+.header a {
   width: 200px;
   height: 140px;
 }
 
-.main_header .btn_login {
+.header .btn_login {
   width: 100px;
   height: 38px;
   background: transparent;
