폴더 수정 및 프로필 jwt 구현 성

--- a/src/main/resources/templates/cafe.html
+++ b/src/main/resources/templates/cafe.html
@@ -7,29 +7,33 @@
 </head>
 <body>
     <div class="cafe">
-        <h2>카페 정보</h2>
-        <div id="cafe-container">
-		    <div th:each="cafe : ${cafes}" class="cafe-card">
+        <div class="carousel" id="cafe-container">
+            <!-- Carousel items -->
+            <div th:each="cafe : ${cafes}" class="cafe-card">
                 <div>
                     <img th:src="${cafe.imageUrl}" class="cafe-image">
                 </div>
                 <button class="prev" onclick="changeSlide(-1, 1)">&#10094;</button>
-        		<button class="next" onclick="changeSlide(1, 1)">&#10095;</button>
-                <div>
-                    <span th:text="${cafe.username}" class="user-info"></span>
+                <button class="next" onclick="changeSlide(1, 1)">&#10095;</button>
+                <div class="info-container">
+                    <div class="user-container">
+                        <span class="username" th:text="${cafe.username}"></span>
+                    </div>
+                    <div class="like-container">
+                        <button class="like-button" onclick="likeClicked()">좋아요</button>
+                        <span class="likes" th:text="${cafe.likes}"></span>
+                    </div>
                 </div>
-                <div>
-                    <span th:text="${cafe.likes}"></span>
-                    <button class="like-button" onclick="likeClicked()">좋아요</button>
-                </div>
-		    </div>
-            <div th:each="cafe, iterStat : ${cafes}" id="myModal" class="modal" data-card-index="1">
-                <span class="close" onclick="closeModal">&times;</span>
+            </div>
+
+            <!-- Modal items -->
+            <div th:each="cafe, iterStat : ${cafes}" class="modal" id="myModal-${iterStat.index}">
+                <span class="close" onclick="closeModal('myModal-${iterStat.index}')">&times;</span>
                 <img th:src="${cafe.imageUrl}" class="cafe-modal-image">
                 <button class="modal-prev" onclick="changeSlideInModal(-1, 1)">&#10094;</button>
-      			<button class="modal-next" onclick="changeSlideInModal(1, 1)">&#10095;</button>
+                <button class="modal-next" onclick="changeSlideInModal(1, 1)">&#10095;</button>
             </div>
-		</div>
+        </div>
     </div>
 </body>
 </html>
