--- a/src/main/resources/templates/recommend.html
+++ b/src/main/resources/templates/recommend.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recommend Page</title>
-    <script src="/js/recommendPageLoader.js"></script>
+    <link rel="stylesheet" href="/css/cafe.css"> 
 </head>
 <body>
     <div class="recommend" th:fragment="recommend">
@@ -22,5 +22,7 @@
     </div>
     <div id="dynamicContent">
     </div>
+    <script src="/js/recommendPageLoader.js"></script>
+    <script src="/js/carouselmodal.js"></script>
 </body>
 </html>
