--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -1,119 +1,170 @@
 body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f8f9fa;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+	min-width: 800px;
+}
+
+
+#profile {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .profile-container {
-    background-color: #ffffff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    text-align: center;
+  display: flex;
+  width: 640px;
+  height: 210px;
+  align-items: center;
+  gap: 100px;
+  justify-content: space-between;
 }
 
-.profile-info img {
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    object-fit: cover;
-    margin-bottom: 20px;
+.profile-container img {
+  border-radius: 50%;
+  width: 180px;
+  height: 180px;
 }
 
-.profile-info h2 {
-    color: #007bff;
-    margin-bottom: 10px;
+.profile-container div {
+  display: flex;
+  flex-direction: column;
 }
 
-.badge {
-            display: inline-block;
-            padding: 0.25em 0.4em;
-            font-size: 75%;
-            font-weight: 700;
-            line-height: 1;
-            text-align: center;
-            white-space: nowrap;
-            vertical-align: baseline;
-            border-radius: 0.25rem;
-            background-color: blue;
-            color: white;
-        }
-
-.uploaded-photos {
-    margin-top: 20px;
+#biography {
+  width: 400px;
+  height: 100px;
+  border-radius: 10px;
+  border: 1px solid lightgrey;
+  overflow: auto;
+  resize: none;
+  padding: 10px;  /* 추가: 내부 여백 설정 */
 }
 
-.uploaded-photo img {
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-    margin: 5px;
-    border-radius: 5px;
+#userType {
+  font-size: 12px;
+  color: gray;
 }
 
-.modal {
-    display: none;
-    position: fixed;
-    top: 40%;
-    left: 50%;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    justify-content: center;
-    align-items: center;
+#imageUploadButton {
+  margin-left: 322px;
+  margin-top: 10px;
+  width: 100px;
+  height: 30px;
+  text-align: center;
 }
 
-.modal-content {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 10px;
-    width: 300px;
-    text-align: center;
+.profile-container div:first-child {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-label {
-    display: block;
-    margin-bottom: 5px;
-    color: #495057;
+#followButton {
+  width: 64px;
+  height: 30px;
+  background-color: white;
+  border: 1px solid lightgray;
+  border-radius: 4px;
+  text-align: center;
+  cursor: pointer;
 }
 
-input[type="file"] {
-    display: none;
+
+.custom-file-upload {
+  display: inline-block;
+  font-size: 14px;
+  margin-top: 4px;
+  padding: 2px 6px;
+  cursor: pointer;
+  width: 40px;
+  background-color: white;
+  border: 1px solid lightgray;
+  border-radius: 4px;
+  text-align: center;  /* 텍스트 가운데 정렬 */
 }
 
-.upload-btn-wrapper {
-    position: relative;
-    overflow: hidden;
-    display: inline-block;
+.profile-container h2 {
+  display: flex;
+  justify-content: space-between;
 }
 
-.btn {
-    border: 2px solid gray;
-    color: gray;
-    background-color: white;
-    padding: 8px 20px;
-    border-radius: 8px;
-    font-size: 20px;
-    font-weight: bold;
-}
 
-.upload-btn-wrapper input[type=file] {
-    font-size: 100px;
-    position: absolute;
+#imageUploadModal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
     left: 0;
     top: 0;
-    opacity: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
-.uploaded-photo {
-    display: inline-block;
-    text-align: center;
+/* Modal Content/Box */
+#imageUploadModal > div {
+    background-color: #fefefe;
+    border-radius: 10px;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid lightgray;
+    width: 600px; /* Set to desired width */
+    height: 400px; /* Set to desired height */
+    box-sizing: border-box; /* Include padding and border in element's total width and height */
+    position: relative; /* Add this */
 }
 
-button {
-    margin-top: 10px;
+#imageUploadModal .button-container {
+    position: absolute; /* Position the buttons at the bottom right */
+    border-radius: 6px;
+    bottom: 20px;
+    right: 20px;
+}
+
+#imageUploadModal #preview {
+    display: block;
+    width: 200px; /* Adjust as needed */
+    height: 200px; /* Adjust as needed */
+    margin-bottom: 10px; /* Space below the box */
+    border: 1px solid #aaa; /* Border around the box */
+    border-radius: 10px;
+    background-color: white; /* Background color of the box */
+    /* Center the image in the box */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+#imageUploadModal button {
+    border: 1px solid lightgray;
+    background-color: transparent;
+    border-radius: 4px;
+    font-size: 12px;
+    padding: 5px 10px;
+    margin-left: 10px; 
+    cursor: pointer;
+}
+
+#imageUploadModal button:last-child {
+    float: right;
+}
+
+#imageCard {
+	max-width: 1200px;
+	margin: 0 auto;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	gap: 20px;
+}
+
+#uploadedImage {
+	margin-top: 60px;
+    width: 240px;
+    height: 300px;
+    border: 1px solid lightgray;
+    border-radius: 8px;
+    box-sizing: border-box;
+    object-fit: cover;
 }
